--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -247,12 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_SIZE = 50000 # Number from 1 to 196884\n",
-    "VAL_SIZE = 2500 # Number from 1 to 7883\n",
+    "TRAIN_SIZE = 5000 # Number from 1 to 196884\n",
+    "VAL_SIZE = 500 # Number from 1 to 7883\n",
     "\n",
     "idxs_train = list(range(len(train_en)))\n",
     "random.shuffle(idxs_train)\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,11 +299,24 @@
     "en_val = []\n",
     "de_val = []\n",
     "\n",
+    "en_freq = {0:100, # there wont be any padding til later, this is just to\n",
+    "           1:0,   # avoid removing the padding token\n",
+    "           2:0,\n",
+    "           3:0}\n",
+    "\n",
+    "de_freq = {0:100, # there wont be any padding til later, this is just to\n",
+    "           1:0,   # avoid removing the padding token\n",
+    "           2:0,\n",
+    "           3:0}\n",
+    "\n",
     "for sent in train_en:\n",
     "    en_idxes = []\n",
     "    for w in sent:\n",
     "        if w not in en_vocab:\n",
     "            en_vocab[w] = len(en_vocab)\n",
+    "            en_freq[en_vocab[w]] = 1\n",
+    "        else:\n",
+    "            en_freq[en_vocab[w]] += 1\n",
     "        en_idxes.append(en_vocab[w])\n",
     "    en_inputs.append(en_idxes)\n",
     "del train_en\n",
@@ -347,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,22 +391,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "768"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "longest sentence 267\n"
+     ]
     }
    ],
    "source": [
-    "len(de_inputs[-1])"
+    "print(\"longest sentence\", len(de_inputs[-1]))"
    ]
   },
   {
@@ -419,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,9 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "German vocab length 14294\n",
+      "English vocab length 10386\n"
+     ]
+    }
+   ],
    "source": [
     "en_idx_to_word = dict((v,k) for k,v in en_vocab.items())\n",
     "de_idx_to_word = dict((v,k) for k,v in de_vocab.items())\n",
@@ -548,11 +567,14 @@
     "en_iwslt['dev'] = en_val\n",
     "de_iwslt['dev'] = de_val\n",
     "\n",
-    "with open('data/processed/english_no_pad_sorted_50k.pickle', 'wb') as handle:\n",
+    "with open('data/processed/english_no_pad_sorted_5k.pickle', 'wb') as handle:\n",
     "    pickle.dump(en_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted_50k.pickle', 'wb') as handle:\n",
-    "    pickle.dump(de_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+    "with open('data/processed/german_no_pad_sorted_5k.pickle', 'wb') as handle:\n",
+    "    pickle.dump(de_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "print(\"German vocab length\", len(de_iwslt['idx2word']))\n",
+    "print(\"English vocab length\", len(en_iwslt['idx2word']))"
    ]
   },
   {
@@ -564,18 +586,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 112, 931, 30, 21824, 18, 3]\n",
-      "15259\n",
-      "22796\n",
-      "125\n",
-      "<sos> wirklich . <eos> \n",
+      "[2, 13736, 1101, 12731, 5770, 13990, 14, 3]\n",
+      "10386\n",
+      "14294\n",
+      "233\n",
+      "<sos> danke . <eos> \n",
       "\n"
      ]
     }
@@ -601,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -618,10 +640,10 @@
     }
    ],
    "source": [
-    "with open('data/processed/english_no_pad_sorted_10k.pickle', 'rb') as handle:\n",
+    "with open('data/processed/english_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted_10k.pickle', 'rb') as handle:\n",
+    "with open('data/processed/german_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)\n",
     "    \n",
     "print(en_iwslt == english)\n",
@@ -696,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
