--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -95,7 +95,8 @@
     "nltk.download('punkt')\n",
     "start = \"<sos>\"\n",
     "end = \"<eos>\"\n",
-    "pad = \"<pad>\""
+    "pad = \"<pad>\"\n",
+    "unk = \"<unk>\""
    ]
   },
   {
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +274,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Don't run this cell when you are going to load the uncommon words that you have already saved and are trying to replace them\n",
+    "\n",
     "## The following cell turns words into indexes and defines the vocabulary for both languages"
    ]
   },
@@ -299,24 +302,24 @@
     "en_val = []\n",
     "de_val = []\n",
     "\n",
-    "en_freq = {0:100, # there wont be any padding til later, this is just to\n",
-    "           1:0,   # avoid removing the padding token\n",
-    "           2:0,\n",
-    "           3:0}\n",
+    "en_freq = {'<pad>':100, # there wont be any padding til later, this is just to\n",
+    "           '<unk>':2,   # avoid removing the padding token\n",
+    "           '<sos>':0,\n",
+    "           '<eos>':0}\n",
     "\n",
-    "de_freq = {0:100, # there wont be any padding til later, this is just to\n",
-    "           1:0,   # avoid removing the padding token\n",
-    "           2:0,\n",
-    "           3:0}\n",
+    "de_freq = {'<pad>':100, # there wont be any padding til later, this is just to\n",
+    "           '<unk>':2,   # avoid removing the padding token\n",
+    "           '<sos>':0,\n",
+    "           '<eos>':0}\n",
     "\n",
     "for sent in train_en:\n",
     "    en_idxes = []\n",
     "    for w in sent:\n",
     "        if w not in en_vocab:\n",
     "            en_vocab[w] = len(en_vocab)\n",
-    "            en_freq[en_vocab[w]] = 1\n",
+    "            en_freq[w] = 1\n",
     "        else:\n",
-    "            en_freq[en_vocab[w]] += 1\n",
+    "            en_freq[w] += 1\n",
     "        en_idxes.append(en_vocab[w])\n",
     "    en_inputs.append(en_idxes)\n",
     "del train_en\n",
@@ -326,6 +329,9 @@
     "    for w in sent:\n",
     "        if w not in de_vocab:\n",
     "            de_vocab[w] = len(de_vocab)\n",
+    "            de_freq[w] = 1\n",
+    "        else:\n",
+    "            de_freq[w] += 1\n",
     "        de_idxes.append(de_vocab[w])\n",
     "    de_inputs.append(de_idxes)\n",
     "del train_de\n",
@@ -335,6 +341,9 @@
     "    for w in sent:\n",
     "        if w not in en_vocab:\n",
     "            en_vocab[w] = len(en_vocab)\n",
+    "            en_freq[w] = 1\n",
+    "        else:\n",
+    "            en_freq[w] += 1\n",
     "        en_idxes.append(en_vocab[w])\n",
     "    en_val.append(en_idxes)\n",
     "del dev_en\n",
@@ -344,9 +353,339 @@
     "    for w in sent:\n",
     "        if w not in de_vocab:\n",
     "            de_vocab[w] = len(de_vocab)\n",
+    "            de_freq[w] = 1\n",
+    "        else:\n",
+    "            de_freq[w] += 1\n",
     "        de_idxes.append(de_vocab[w])\n",
     "    de_val.append(de_idxes)\n",
     "del dev_de"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Don't run this cell when you are going to load the uncommon words that you have already saved and are trying to replace them\n",
+    "\n",
+    "## Make a list of uncommon words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleted\n",
+      "deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "en_uncommon = {}\n",
+    "de_uncommon = {}\n",
+    "\n",
+    "for word, freq in en_freq.items():\n",
+    "    if freq < 2:\n",
+    "        en_uncommon[word] = len(en_uncommon)\n",
+    "        \n",
+    "for word, freq in de_freq.items():\n",
+    "    if freq < 2:\n",
+    "        de_uncommon[word] = len(de_uncommon)\n",
+    "\n",
+    "if '<unk>' in en_uncommon:\n",
+    "    print(\"deleted\")\n",
+    "    del en_uncommon['<unk>']\n",
+    "\n",
+    "if '<unk>' in de_uncommon:\n",
+    "    print(\"deleted\")\n",
+    "    del de_uncommon['<unk>']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Don't run this cell when you are going to load the uncommon words that you have already saved and are trying to replace them\n",
+    "\n",
+    "## Save these uncommon words to a file\n",
+    "\n",
+    "### Restart the kernel after you've saved the uncommon words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/processed/english_uncommon_words.pickle', 'wb') as handle:\n",
+    "    pickle.dump(en_uncommon, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('data/processed/german_uncommon_words.pickle', 'wb') as handle:\n",
+    "    pickle.dump(de_uncommon, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the uncommon words from the pickled data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/processed/english_uncommon_words.pickle', 'rb') as handle:\n",
+    "    en_uncommon = pickle.load(handle)\n",
+    "    \n",
+    "with open('data/processed/german_uncommon_words.pickle', 'rb') as handle:\n",
+    "    de_uncommon = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "en_vocab = {}\n",
+    "de_vocab = {}\n",
+    "en_vocab['<pad>'] = 0\n",
+    "en_vocab['<unk>'] = 1 \n",
+    "en_vocab['<sos>'] = 2\n",
+    "en_vocab['<eos>'] = 3\n",
+    "\n",
+    "de_vocab['<pad>'] = 0\n",
+    "de_vocab['<unk>'] = 1\n",
+    "de_vocab['<sos>'] = 2\n",
+    "de_vocab['<eos>'] = 3\n",
+    "\n",
+    "en_inputs = []\n",
+    "de_inputs = []\n",
+    "\n",
+    "en_val = []\n",
+    "de_val = []\n",
+    "\n",
+    "for sent in train_en:\n",
+    "    en_idxes = []\n",
+    "    for i, w in enumerate(sent):\n",
+    "        if w in en_uncommon:\n",
+    "            sent[i] = '<unk>'\n",
+    "            del en_uncommon[w]\n",
+    "        elif w not in en_vocab:\n",
+    "            en_vocab[w] = len(en_vocab)\n",
+    "        en_idxes.append(en_vocab[sent[i]])\n",
+    "    en_inputs.append(en_idxes)\n",
+    "del train_en\n",
+    "\n",
+    "for sent in dev_en:\n",
+    "    en_idxes = []\n",
+    "    for i, w in enumerate(sent):\n",
+    "        if w in en_uncommon:\n",
+    "            sent[i] = '<unk>'\n",
+    "            del en_uncommon[w]\n",
+    "        elif w not in en_vocab:\n",
+    "            en_vocab[w] = len(en_vocab)\n",
+    "        en_idxes.append(en_vocab[sent[i]])\n",
+    "    en_inputs.append(en_idxes)\n",
+    "del dev_en\n",
+    "\n",
+    "for sent in train_de:\n",
+    "    de_idxes = []\n",
+    "    for i, w in enumerate(sent):\n",
+    "        if w in de_uncommon:\n",
+    "            sent[i] = '<unk>'\n",
+    "            del de_uncommon[w]\n",
+    "        elif w not in de_vocab:\n",
+    "            de_vocab[w] = len(de_vocab)\n",
+    "        de_idxes.append(de_vocab[sent[i]])\n",
+    "    de_inputs.append(de_idxes)\n",
+    "del train_de\n",
+    "\n",
+    "for sent in dev_de:\n",
+    "    de_idxes = []\n",
+    "    for i, w in enumerate(sent):\n",
+    "        if w in de_uncommon:\n",
+    "            sent[i] = '<unk>'\n",
+    "            del de_uncommon[w]\n",
+    "        elif w not in de_vocab:\n",
+    "            de_vocab[w] = len(de_vocab)\n",
+    "        de_idxes.append(de_vocab[sent[i]])\n",
+    "    de_inputs.append(de_idxes)\n",
+    "del dev_de"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'<pad>': 0, '<unk>': 1, '<sos>': 2, '<eos>': 3, 'the': 4, 'brown': 5, 'cow': 6, 'jumped': 7}\n",
+      "{'thing': 1}\n",
+      "['<sos>', 'the', 'brown', 'cow', '<unk>', 'jumped', '<eos>']\n",
+      "[2, 4, 5, 6, 1, 7, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vocab={}\n",
+    "# vocab['<pad>'] = 0\n",
+    "# vocab['<unk>'] = 1 \n",
+    "# vocab['<sos>'] = 2\n",
+    "# vocab['<eos>'] = 3\n",
+    "\n",
+    "# uncommon = {'then':0, 'thing':1}\n",
+    "\n",
+    "# sample = ['<sos>', 'the', 'brown', 'cow', 'then', 'jumped', '<eos>']\n",
+    "\n",
+    "# sidx = []\n",
+    "\n",
+    "# for i, w in enumerate(sample):\n",
+    "#     if w in uncommon:\n",
+    "#         sample[i] = '<unk>'\n",
+    "#         del uncommon[w]\n",
+    "#     elif w not in vocab:\n",
+    "#         vocab[w] = len(vocab)\n",
+    "#     sidx.append(vocab[sample[i]])  \n",
+    "    \n",
+    "# print(vocab)\n",
+    "# print(uncommon)\n",
+    "# print(sample)\n",
+    "# print(sidx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print examples of words that infrequently used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23267 of the 58510 english words are only used once\n",
+      "71615 of the 129363 german words are only used once\n",
+      "cmos\n",
+      "super-cooperators\n",
+      "dnc\n",
+      "weighting\n",
+      "leat\n",
+      "herblock\n",
+      "you.\n",
+      "partible\n",
+      "trifling\n",
+      "cycads\n",
+      "kommunikationsgeräte\n",
+      "endozytose\n",
+      "rosabeth\n",
+      "unerschrockene\n",
+      "falschlaufenden\n",
+      "konsummiert\n",
+      "steuersätze\n",
+      "ghul\n",
+      "wirtschaftskräfte\n",
+      "verteilungsseite\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(en_uncommon), \"of the\", len(en_freq), \"english words are only used once\")\n",
+    "print(len(de_uncommon), \"of the\", len(de_freq), \"german words are only used once\")\n",
+    "\n",
+    "en_idx_to_word = dict((v,k) for k,v in en_vocab.items())\n",
+    "de_idx_to_word = dict((v,k) for k,v in de_vocab.items())\n",
+    "\n",
+    "for i in range(10):\n",
+    "    idx = en_uncommon[random.randint(0,(len(en_uncommon)))]\n",
+    "    print(en_idx_to_word[idx])\n",
+    "    \n",
+    "for i in range(10):\n",
+    "    idx = de_uncommon[random.randint(0,(len(de_uncommon)))]\n",
+    "    print(de_idx_to_word[idx])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove infrequent words from the dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "english training\n",
+      "english validation\n",
+      "german training\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-c8c71e688cb4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"german training\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msent\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mde_inputs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0midx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mde_uncommon\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m             \u001b[0msent\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# en_idx_to_word = dict((v,k) for k,v in en_vocab.items())\n",
+    "# de_idx_to_word = dict((v,k) for k,v in de_vocab.items())       \n",
+    "\n",
+    "# print(\"english training\")\n",
+    "# for sent in en_inputs:\n",
+    "#     for i, idx in enumerate(sent):\n",
+    "#         if idx in en_uncommon:\n",
+    "#             sent[i] = 1\n",
+    "#             del en_idx_to_word[idx]\n",
+    "        \n",
+    "# print(\"english validation\")\n",
+    "# for sent in en_val:\n",
+    "#     for i, idx in enumerate(sent):\n",
+    "#         if idx in en_uncommon:\n",
+    "#             sent[i] = 1\n",
+    "#             del en_idx_to_word[idx]\n",
+    "\n",
+    "# print(\"german training\")\n",
+    "# for sent in de_inputs:\n",
+    "#     for i, idx in enumerate(sent):\n",
+    "#         if idx in de_uncommon:\n",
+    "#             sent[i] = 1\n",
+    "#             del de_idx_to_word[idx]\n",
+    "        \n",
+    "# print(\"german validation\")\n",
+    "# for sent in de_val:\n",
+    "#     for i, idx in enumerate(sent):\n",
+    "#         if idx in de_uncommon:\n",
+    "#             sent[i] = 1\n",
+    "#             del de_idx_to_word[idx]            \n"
    ]
   },
   {
@@ -539,15 +878,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "German vocab length 14294\n",
-      "English vocab length 10386\n"
+      "German vocab length 57746\n",
+      "English vocab length 35236\n"
      ]
     }
    ],
@@ -567,10 +906,10 @@
     "en_iwslt['dev'] = en_val\n",
     "de_iwslt['dev'] = de_val\n",
     "\n",
-    "with open('data/processed/english_no_pad_sorted_5k.pickle', 'wb') as handle:\n",
+    "with open('data/processed/english_unk.pickle', 'wb') as handle:\n",
     "    pickle.dump(en_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted_5k.pickle', 'wb') as handle:\n",
+    "with open('data/processed/german_unk.pickle', 'wb') as handle:\n",
     "    pickle.dump(de_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
     "print(\"German vocab length\", len(de_iwslt['idx2word']))\n",
@@ -623,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -640,10 +979,10 @@
     }
    ],
    "source": [
-    "with open('data/processed/english_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
+    "with open('data/processed/english_unk.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open('data/processed/german_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
+    "with open('data/processed/german_unk.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)\n",
     "    \n",
     "print(en_iwslt == english)\n",
