--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "196884\n",
-      "196884\n"
+      "29001\n",
+      "29001\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -216,12 +216,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Sentences (training): 196884\n",
-      "Number of Sentences (dev): 7883\n",
-      "Max length English (training): 743\n",
-      "Max length German (training): 768\n",
-      "Max length English (dev): 173\n",
-      "Max length German (dev): 169\n"
+      "Number of Sentences (training): 29001\n",
+      "Number of Sentences (dev): 1015\n",
+      "Max length English (training): 42\n",
+      "Max length German (training): 46\n",
+      "Max length English (dev): 32\n",
+      "Max length German (dev): 35\n"
      ]
     }
    ],
@@ -252,8 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_SIZE = 5000 # Number from 1 to 196884\n",
-    "VAL_SIZE = 500 # Number from 1 to 7883\n",
+    "TRAIN_SIZE = 100000 # Number from 1 to 196884\n",
+    "VAL_SIZE = 3500 # Number from 1 to 7883\n",
     "\n",
     "idxs_train = list(range(len(train_en)))\n",
     "random.shuffle(idxs_train)\n",
@@ -274,9 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Don't run this cell when you are going to load the uncommon words that you have already saved and are trying to replace them\n",
-    "\n",
-    "## The following cell turns words into indexes and defines the vocabulary for both languages"
+    "## The following cell gets the frequency of words in the dataset"
    ]
   },
   {
@@ -285,23 +283,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "en_vocab = {}\n",
-    "de_vocab = {}\n",
-    "en_vocab['<pad>'] = 0\n",
-    "en_vocab['<unk>'] = 1 \n",
-    "en_vocab['<sos>'] = 2\n",
-    "en_vocab['<eos>'] = 3\n",
-    "\n",
-    "de_vocab['<pad>'] = 0\n",
-    "de_vocab['<unk>'] = 1\n",
-    "de_vocab['<sos>'] = 2\n",
-    "de_vocab['<eos>'] = 3\n",
-    "en_inputs = []\n",
-    "de_inputs = []\n",
-    "\n",
-    "en_val = []\n",
-    "de_val = []\n",
-    "\n",
     "en_freq = {'<pad>':100, # there wont be any padding til later, this is just to\n",
     "           '<unk>':2,   # avoid removing the padding token\n",
     "           '<sos>':0,\n",
@@ -313,77 +294,46 @@
     "           '<eos>':0}\n",
     "\n",
     "for sent in train_en:\n",
-    "    en_idxes = []\n",
     "    for w in sent:\n",
-    "        if w not in en_vocab:\n",
-    "            en_vocab[w] = len(en_vocab)\n",
+    "        if w not in en_freq:\n",
     "            en_freq[w] = 1\n",
     "        else:\n",
     "            en_freq[w] += 1\n",
-    "        en_idxes.append(en_vocab[w])\n",
-    "    en_inputs.append(en_idxes)\n",
-    "del train_en\n",
     "    \n",
     "for sent in train_de:\n",
-    "    de_idxes = []\n",
     "    for w in sent:\n",
-    "        if w not in de_vocab:\n",
-    "            de_vocab[w] = len(de_vocab)\n",
+    "        if w not in de_freq:\n",
     "            de_freq[w] = 1\n",
     "        else:\n",
     "            de_freq[w] += 1\n",
-    "        de_idxes.append(de_vocab[w])\n",
-    "    de_inputs.append(de_idxes)\n",
-    "del train_de\n",
     "    \n",
     "for sent in dev_en:\n",
-    "    en_idxes = []\n",
     "    for w in sent:\n",
-    "        if w not in en_vocab:\n",
-    "            en_vocab[w] = len(en_vocab)\n",
+    "        if w not in en_freq:\n",
     "            en_freq[w] = 1\n",
     "        else:\n",
     "            en_freq[w] += 1\n",
-    "        en_idxes.append(en_vocab[w])\n",
-    "    en_val.append(en_idxes)\n",
-    "del dev_en\n",
     "    \n",
     "for sent in dev_de:\n",
-    "    de_idxes = []\n",
     "    for w in sent:\n",
-    "        if w not in de_vocab:\n",
-    "            de_vocab[w] = len(de_vocab)\n",
+    "        if w not in de_freq:\n",
     "            de_freq[w] = 1\n",
     "        else:\n",
-    "            de_freq[w] += 1\n",
-    "        de_idxes.append(de_vocab[w])\n",
-    "    de_val.append(de_idxes)\n",
-    "del dev_de"
+    "            de_freq[w] += 1\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Don't run this cell when you are going to load the uncommon words that you have already saved and are trying to replace them\n",
-    "\n",
     "## Make a list of uncommon words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deleted\n",
-      "deleted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "en_uncommon = {}\n",
     "de_uncommon = {}\n",
@@ -409,49 +359,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Don't run this cell when you are going to load the uncommon words that you have already saved and are trying to replace them\n",
-    "\n",
-    "## Save these uncommon words to a file\n",
-    "\n",
-    "### Restart the kernel after you've saved the uncommon words"
+    "## Replace the uncommon words with unknown tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data/processed/english_uncommon_words.pickle', 'wb') as handle:\n",
-    "    pickle.dump(en_uncommon, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "    \n",
-    "with open('data/processed/german_uncommon_words.pickle', 'wb') as handle:\n",
-    "    pickle.dump(de_uncommon, handle, protocol=pickle.HIGHEST_PROTOCOL)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load the uncommon words from the pickled data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data/processed/english_uncommon_words.pickle', 'rb') as handle:\n",
-    "    en_uncommon = pickle.load(handle)\n",
-    "    \n",
-    "with open('data/processed/german_uncommon_words.pickle', 'rb') as handle:\n",
-    "    de_uncommon = pickle.load(handle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +407,7 @@
     "        elif w not in en_vocab:\n",
     "            en_vocab[w] = len(en_vocab)\n",
     "        en_idxes.append(en_vocab[sent[i]])\n",
-    "    en_inputs.append(en_idxes)\n",
+    "    en_val.append(en_idxes)\n",
     "del dev_en\n",
     "\n",
     "for sent in train_de:\n",
@@ -518,7 +431,7 @@
     "        elif w not in de_vocab:\n",
     "            de_vocab[w] = len(de_vocab)\n",
     "        de_idxes.append(de_vocab[sent[i]])\n",
-    "    de_inputs.append(de_idxes)\n",
+    "    de_val.append(de_idxes)\n",
     "del dev_de"
    ]
   },
@@ -569,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Print examples of words that infrequently used"
+    "## Print examples of words that are infrequently used"
    ]
   },
   {
@@ -699,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,14 +643,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "longest sentence 267\n"
+      "longest sentence 768\n"
      ]
     }
    ],
@@ -878,15 +791,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "German vocab length 57746\n",
-      "English vocab length 35236\n"
+      "German vocab length 8025\n",
+      "English vocab length 6028\n"
      ]
     }
    ],
@@ -906,10 +819,10 @@
     "en_iwslt['dev'] = en_val\n",
     "de_iwslt['dev'] = de_val\n",
     "\n",
-    "with open('data/processed/english_unk.pickle', 'wb') as handle:\n",
+    "with open('data/processed/english_unk_sorted_100k.pickle', 'wb') as handle:\n",
     "    pickle.dump(en_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('data/processed/german_unk.pickle', 'wb') as handle:\n",
+    "with open('data/processed/german_unk_sorted_100k.pickle', 'wb') as handle:\n",
     "    pickle.dump(de_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
     "print(\"German vocab length\", len(de_iwslt['idx2word']))\n",
@@ -979,10 +892,10 @@
     }
    ],
    "source": [
-    "with open('data/processed/english_unk.pickle', 'rb') as handle:\n",
+    "with open('data/processed/english_unk_sorted_100k.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open('data/processed/german_unk.pickle', 'rb') as handle:\n",
+    "with open('data/processed/german_unk_sorted_100k.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)\n",
     "    \n",
     "print(en_iwslt == english)\n",
