Sort within batches and add sentence lengths

--- a/Batch Experiments.ipynb
+++ b/Batch Experiments.ipynb
@@ -429,8 +429,10 @@
     "def to_padded_tensor(batch):\n",
     "    max_len_src = max([len(sent['source']) for sent in batch])  \n",
     "    max_len_trg = max([len(sent['target']) for sent in batch])\n",
+    "    source_lengths = torch.zeros(len(batch), dtype=torch.int64).cpu()\n",
     "\n",
-    "    for sent in batch:\n",
+    "    for i, sent in enumerate(batch):\n",
+    "        source_lengths[i] = len(sent['source'])\n",
     "        dif_src = max_len_src - len(sent['source'])\n",
     "        dif_trg = max_len_trg - len(sent['target'])\n",
     "\n",
@@ -457,7 +459,8 @@
     "        target[:,i] = torch.tensor(batch[i]['target'])\n",
     "        \n",
     "    padded_tensor = {\"source\": source.to(device),\n",
-    "                    \"target\": target.to(device)}\n",
+    "                    \"target\": target.to(device),\n",
+    "                    \"srclen\": source_lengths}\n",
     "    \n",
     "    return padded_tensor"
    ]
@@ -474,6 +477,7 @@
     "    \n",
     "    buckets = [[] for i in range(0, max_len, bucket_step)]\n",
     "    bucket_lengths = [0 for i in buckets]\n",
+    "    print(len(bucket_lengths))\n",
     "    batches = []\n",
     "    \n",
     "    # For every sentence in the dataset, find its corresponding bucket and put it in there, once the bucket\n",
@@ -483,10 +487,11 @@
     "                     \"target\": english[i]}\n",
     "        \n",
     "        # calculate the index of the buckets to put the sentence into, = len(Sentence) // Bucket_step - 1\n",
-    "        idx = len(sent2sent['source'])//bucket_step - 1\n",
-    "        \n",
+    "        idx = len(sent2sent['source'])//bucket_step - 1 \n",
+    "\n",
     "        if bucket_lengths[idx] + len(sent2sent['source']) > batch_size:\n",
-    "            batches.append(to_padded_tensor(buckets[idx][:]))\n",
+    "            sorted_bucket = sorted(buckets[idx], key=lambda x: len(x['source']), reverse=True)\n",
+    "            batches.append(to_padded_tensor(sorted_bucket))\n",
     "            del buckets[idx][:]\n",
     "            buckets[idx].append(sent2sent)\n",
     "            bucket_lengths[idx] = len(sent2sent['source'])\n",
@@ -498,10 +503,19 @@
     "    # for any remaining buckets that did not get sent off, send them off to batches\n",
     "    for b in buckets:\n",
     "        if b: # if the list has any value in it\n",
-    "            batches.append(to_padded_tensor(b[:]))\n",
+    "            sorted_bucket = sorted(b, key=lambda x: len(x['source']), reverse=True)\n",
+    "            batches.append(to_padded_tensor(sorted_bucket))\n",
     "            del b[:]\n",
     "    \n",
-    "    return batches"
+    "    return batches\n",
+    "\n",
+    "training_data = [[german['dev'][i], english['dev'][i]] for i in range(len(german['dev']))]\n",
+    "\n",
+    "random.shuffle(training_data)\n",
+    "\n",
+    "de_shuffled = [td[0] for td in training_data]\n",
+    "en_shuffled = [td[1] for td in training_data]\n",
+    "batches = bake_batches(de_shuffled, en_shuffled)\n"
    ]
   },
   {
@@ -976,7 +990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
