Implement BPE into Preprocessing

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,27 +117,27 @@
     "\n",
     "for i, sentence in enumerate(train_en):\n",
     "    tokenized_sentence = mt_en.tokenize(sentence)\n",
-    "    tokenized_sentence = [start] + tokenized_sentence + [end]\n",
+    "#     tokenized_sentence = [start] + tokenized_sentence + [end]\n",
     "    train_en[i] = tokenized_sentence\n",
     "    \n",
     "for i, sentence in enumerate(dev_en):\n",
     "    tokenized_sentence = mt_en.tokenize(sentence)\n",
-    "    tokenized_sentence = [start] + tokenized_sentence + [end]\n",
+    "#     tokenized_sentence = [start] + tokenized_sentence + [end]\n",
     "    dev_en[i] = tokenized_sentence\n",
     "    \n",
     "for i, sentence in enumerate(train_de):\n",
     "    tokenized_sentence = mt_de.tokenize(sentence)\n",
-    "    tokenized_sentence = [start] + tokenized_sentence + [end]\n",
+    "#     tokenized_sentence = [start] + tokenized_sentence + [end]\n",
     "    train_de[i] = tokenized_sentence\n",
     "    \n",
     "for i, sentence in enumerate(dev_de):\n",
     "    tokenized_sentence = mt_de.tokenize(sentence)\n",
-    "    tokenized_sentence = [start] + tokenized_sentence + [end]\n",
+    "#     tokenized_sentence = [start] + tokenized_sentence + [end]\n",
     "    dev_de[i] = tokenized_sentence\n",
     "    \n",
     "for i, sentence in enumerate(test_de):\n",
     "    tokenized_sentence = mt_de.tokenize(sentence)\n",
-    "    tokenized_sentence = [start] + tokenized_sentence + [end]\n",
+    "#     tokenized_sentence = [start] + tokenized_sentence + [end]\n",
     "    test_de[i] = tokenized_sentence"
    ]
   },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "! cd data && subword-nmt learn-joint-bpe-and-vocab --input tokenized/train.tk.de tokenized/train.tk.en -s 50000 -o bpe/codes.txt --write-vocabulary bpe/vocab.de bpe/vocab.en"
+    "! cd data && subword-nmt learn-joint-bpe-and-vocab --input tokenized/train.tk.de tokenized/train.tk.en -s 35000 -o bpe/codes.txt --write-vocabulary bpe/vocab.de bpe/vocab.en"
    ]
   },
   {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -400,16 +400,16 @@
      "text": [
       "Number of Sentences (training): 196884\n",
       "Number of Sentences (dev): 7883\n",
-      "Max length English (training): 851\n",
-      "Max length German (training): 906\n",
-      "Max length English (dev): 234\n",
-      "Max length German (dev): 281\n",
+      "Max length English (training): 843\n",
+      "Max length German (training): 858\n",
+      "Max length English (dev): 224\n",
+      "Max length German (dev): 260\n",
       "\n",
-      "Average number of tokens English (training): 26.13 \n",
-      "Average number of tokens German (training): 27.17 \n",
-      "Average number of tokens English (dev): 25.73 \n",
-      "Average number of tokens German (dev): 27.05 \n",
-      "Average number of tokens Test Set: 24.41 \n"
+      "Average number of tokens English (training): 23.57 \n",
+      "Average number of tokens German (training): 24.32 \n",
+      "Average number of tokens English (dev): 23.18 \n",
+      "Average number of tokens German (dev): 24.23 \n",
+      "Average number of tokens Test Set: 21.59 \n"
      ]
     }
    ],
@@ -424,6 +424,7 @@
     "\n",
     "print(\"Max length English (dev):\", max([len(sent) for sent in dev_en]))\n",
     "print(\"Max length German (dev):\", max([len(sent) for sent in dev_de]))\n",
+    "print(\"Max length German (test):\", max([len(sent) for sent in test_de]))\n",
     "\n",
     "print(\"\")\n",
     "\n",
@@ -477,9 +478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12388\n"
+     ]
+    }
+   ],
    "source": [
     "vocab ={}\n",
     "\n",
@@ -533,7 +542,9 @@
     "        if w not in vocab:\n",
     "            vocab[w] = len(vocab)\n",
     "        idxes.append(vocab[w])\n",
-    "    de_test.append(idxes)"
+    "    de_test.append(idxes)\n",
+    "    \n",
+    "print(len(vocab))"
    ]
   },
   {
@@ -545,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1069,8 +1080,8 @@
      "output_type": "stream",
      "text": [
       "using BPE data\n",
-      "German vocab length 11555\n",
-      "English vocab length 11555\n"
+      "German vocab length 12388\n",
+      "English vocab length 12388\n"
      ]
     }
    ],
@@ -1094,10 +1105,10 @@
     "    \n",
     "    de_iwslt['test'] = de_test\n",
     "\n",
-    "    with open('data/processed/english_bpe.pickle', 'wb') as handle:\n",
+    "    with open('data/processed/english_bpe_40.pickle', 'wb') as handle:\n",
     "        pickle.dump(en_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
-    "    with open('data/processed/german_bpe.pickle', 'wb') as handle:\n",
+    "    with open('data/processed/german_bpe_40.pickle', 'wb') as handle:\n",
     "        pickle.dump(de_iwslt, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "    print(\"German vocab length\", len(de_iwslt['idx2word']))\n",
